Fixed jump links

--- a/app/client/stylesheets/style.css
+++ b/app/client/stylesheets/style.css
@@ -298,3 +298,10 @@ button.btn.btn-primary {
 .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:focus {
   background-color: transparent;
 }
+
+.anchor{
+  display: block;
+  height: 60px; /*same height as header*/
+  margin-top: -60px; /*same height as header*/
+  visibility: hidden;
+}
